2010-01-27 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeTools.m:
	* Source/GSThemePrivate.m: Added a contentRect feature to 
	GSDrawTiles. Previously, GSDrawTiles assumed that the rect the user
	would draw in was exactly the center middle rect; i.e. the 
	return value of the xxStlyeFillRect: methods was the center middle
	rect scaled to fit inside the drawing rect.

	Now this can be customized in Nine Patch tiles; see the diagrams at:
	http://developer.android.com/guide/topics/graphics/2d-graphics.html#nine-patch

2010-01-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m: (-hash): Don't use a dynamic union, as clang
	doesn't support this.
	Patch by Niels Grewe <niels.grewe@halbordnung.de>.

2010-01-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-rangeOfTextTable:atIndex:): Add
	implementation for this method, done during LindauSTEP.

2010-01-27 Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/GNUstepGUI/GSTheme.h:
	* Source/GSThemeDrawing.m:
	(-titleViewClassForMenuView:): Added the possibility to customize the 
	title view with this new method.
	* Source/NSMenuView.m (-update): Modified to loop uk the title view 
	class through the active theme rather than just using GSTitleView.

2010-01-27 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSApplication.m (-_postAndSendEvent:): Added.
	* Source/GSDragView 
	(-_sendLocalEvent:action:position:timestamp:toWindow:): Dispatch drag 
	events -[NSApp _postAndSendEvent:] to match Mac OS X behavior.

2010-01-26 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSView.m (-setHidden:): When hiding a view, we need to 
	call -setNeedsDisplay:YES on the superview, rather than self

2010-01-26 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSView.m (-setHidden:): Fix un-hiding of hidden views, loaded
	from nib's, with subviews. The subview coordinates just need to be
	invalidated when the view is unhidden.

2010-01-24 03:07-EST Gregory John Casamento <greg.casamento@gmail.com>
